# Otus_allocator

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.in  Utils.cpp  Utils.h  custom_allocator.h  custom_container.h
.github/workflows/: Allocators.yml
include/: Chunk.h  Utils.h  custom_allocator.h  custom_container.h
src/: Utils.cpp  main.cpp
test/: main_test.cpp  test_allocator.cpp  test_container.cpp
